--- a/csv/csv2ttl_config.json
+++ b/csv/csv2ttl_config.json
@@ -3,7 +3,7 @@
     "title": [
       {
         "lang": "de",
-        "value": "Bildungsstandards Chemie Sek 1 aud dem Jahr 2004"
+        "value": "Bildungsstandards im Fach Chemie MSA 2004"
       }
     ],
     "csv_delimiter": ",",
@@ -16,7 +16,7 @@
         "title": [
           {
             "lang": "de",
-            "value": "Bildungsstandards für die Kompetenzbereiche des Fachs Chemie"
+            "value": "Standards für die Kompetenzbereiche des Faches Chemie"
           }
         ],
         "filenameSource": "k1_Bildungsstandards_Kompetenzbereiche.csv",
@@ -24,7 +24,7 @@
         "description": [
           {
             "lang": "de",
-            "value": "\"\"Mit dem Erwerb des Mittleren Schulabschlusses verfügen die Schülerinnen und Schüler über naturwissenschaftliche Kompetenzen im Allgemeinen sowie chemische Kompetenzen im Besonderen.\n\nKompetenzen sind nach Weinert (2001) „die bei Individuen verfügbaren oder durch sie erlernbaren kognitiven Fähigkeiten und Fertigkeiten, um bestimmte Probleme zu lösen, sowie die damit verbundenen motivationalen, volitionalen und sozialen Bereitschaften und Fähigkeiten, um die Problemlösungen in variablen Situationen erfolgreich und verantwortungsvoll nutzen zu können“. Die Kompetenzen, die eine naturwissenschaftliche Grundbildung ausmachen, bieten Anknüpfungspunkte für fachübergreifendes und fächerverbindendes Arbeiten. Sie werden ohne Berücksichtigung ihrer Vernetzung vier Bereichen zugeordnet und für das Fach Chemie spezifiziert:\"\""
+            "value": "\"\"Mit dem Erwerb des Mittleren Schulabschlusses verfügen die Schülerinnen und Schüler über naturwissenschaftliche Kompetenzen im Allgemeinen sowie chemische Kompetenzen im Besonderen.\n\n Kompetenzen sind nach Weinert (2001) ,die bei Individuen verfügbaren oder durch sie erlernbaren kognitiven Fähigkeiten und Fertigkeiten, um bestimmte Probleme zu lösen, sowie die damit verbundenen motivationalen, volitionalen und sozialen Bereitschaften und Fähigkeiten, um die Problemlösungen in variablen Situationen erfolgreich und verantwortungsvoll nutzen zu können'. Die Kompetenzen, die eine naturwissenschaftliche Grundbildung ausmachen, bieten Anknüpfungspunkte für fachübergreifendes und fächerverbindendes Arbeiten. Sie werden ohne Berücksichtigung ihrer Vernetzung vier Bereichen zugeordnet und für das Fach Chemie spezifiziert:\"\""
           }
         ]
       },
@@ -33,7 +33,7 @@
         "title": [
           {
             "lang": "de",
-            "value": "Anforderungsbereiche"
+            "value": "Fachspezifische Beschreibung der Anforderungsbereiche"
           }
         ],
         "filenameSource": "a1_Anforderungsbereiche.csv",
