--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v40",
   "version": "0.1.0",
-  "description": "Bildungsstandards Chemie Sek 1 2004",
+  "description": "Bildungsstandards Chemie Sek I 2004",
   "main": "index.js",
   "scripts": {
     "run_id": "addidcsv csv",
@@ -18,6 +18,6 @@
   },
   "homepage": "https://github.com/iqb-vocabs/v40#readme",
   "dependencies": {
-    "@iqb/csv2ttl": "^0.8.0"
+    "@iqb/csv2ttl": "^0.8.2"
   }
 }
