Rename Sek I to MSA

--- a/csv/csv2ttl_config.json
+++ b/csv/csv2ttl_config.json
@@ -3,7 +3,7 @@
     "title": [
       {
         "lang": "de",
-        "value": "Bildungsstandards Chemie Sek I 2004"
+        "value": "Bildungsstandards Chemie MSA 2004"
       }
     ],
     "csv_delimiter": ",",
